<resources xmlns:tools="http://schemas.android.com/tools"

    tools:ignore="MissingTranslation">
    <string name="app_name">每聊</string>
    <string name="to_expand_hint">更多</string>
    <string name="to_shrink_hint">收起</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="feek_back">意见反馈</string>
    <string name="motify_pwd">修改密码</string>
    <string name="determine">确定</string>
    <string name="settings_title">设置</string>
    <string name="user_info">个人信息</string>
    <string name="save_title">保存</string>
    <string name="settings_title_message">消息通知开关</string>
    <string name="massage">消息</string>
    <string name="settings_title_phone">修改手机号</string>
    <string name="settings_title_motify_pwd">修改密码</string>
    <string name="settings_title_update">检查更新</string>
    <string name="settings_title_clear_cache">清除缓存</string>
    <string name="settings_title_recommend_to_friend">推荐给好友</string>
    <string name="settings_my_medal">我的勋章</string>
    <string name="settings_title_feek_back">意见反馈</string>
    <string name="set_wallpaper">设为壁纸</string>
    <string name="feek_back_hint">请输入您的建议,我们会努力为您改进</string>
    <string name="feek_back_phone">请写下您的联系方式(手机号或邮箱)</string>
    <string name="finish">完成</string>
    <string name="ljbd">立即绑定</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_pwd_once">请再次输入密码</string>
    <string name="settings_pwd">请设置密码</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_phone1">请输入您的手机号</string>
    <string name="input_phone_password">输入账号密码</string>
    <string name="login_text">登录</string>
    <string name="user_register">立即注册</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="forget_pwd_title">忘记密码</string>
    <string name="login_text_once">本机号码一键登录</string>
    <string name="login_text_other">短信登录</string>
    <string name="sms_code_login">短信验证码登录</string>
    <string name="phone_code_intput">请输入验证码</string>
    <string name="phone_code_login">使用手机验证码登录</string>
    <string name="pwd_login">密码登录</string>
    <string name="register_bottom">还没有账号？</string>
    <string name="other_login">其他方式登录</string>
    <string name="input_code">请输入验证码</string>
    <string name="set_password">请设置密码 (6-16位)</string>
    <string name="reset_password">重新设置密码 (6-16位)</string>
    <string name="get_code">获取验证码</string>
    <string name="next">下一步</string>
    <string name="info_region">地区</string>
    <string name="me">我的</string>
    <string name="right_now">立即返回</string>
    <string name="download_history">已下载</string>
    <string name="downloading2">下载中</string>
    <string name="me_download">我的下载</string>
    <string name="coupon">优惠劵</string>
    <string name="with_drawals">提现</string>
    <string name="promotion">宣传大使</string>
    <string name="integral">积分</string>
    <string name="payment">支付</string>
    <string name="enrol_activity">已报名活动</string>
    <string name="balance">余额</string>
    <string name="following">已关注</string>
    <string name="updata_pwd">修改密码</string>
    <string name="skip">跳过</string>
    <string name="input_email">请输入邮箱</string>
    <string name="input_name">请输入昵称</string>
    <string name="input_username">请输入姓名</string>
    <string name="nick_name_title">请输入昵称</string>
    <string name="edit_userinfo">编辑资料</string>
    <string name="myfavorites">我的收藏</string>
    <string name="my_message">我的消息</string>
    <string name="change_phone">更换手机号</string>
    <string name="info_age">请输入年龄</string>
    <string name="reighter">注册</string>
    <string name="Year">Y</string>
    <string name="Month">M</string>
    <string name="Day">D</string>
    <string name="main_me_buy_couse">已购买课程</string>
    <string name="joinvip">成为VIP</string>
    <string name="myvip">我的VIP</string>
    <string name="mobile_toast">您现在使用运营商网络,继续操作会消耗较多的流量?</string>
    <string name="dialog_warning">警告</string>
    <string name="dialog_offline">下线通知</string>
    <string name="login_exception">你的账号已在另一台Android手机登录,如非本人操作,则密码可能泄露,建议前往修改密码。</string>
    <string name="not_login">如果当期token为空则表示没有登录过,返回游客</string>
    <string name="userinfo_from_net">如果网络已连接则从网络中获取用户信息</string>
    <string name="userinfo_from_db">如果没有网络则从数据库中获取数据</string>
    <string name="downloading">正在下载</string>
    <string name="download_finish">下载完成</string>
    <string name="is_download_music">已下载该音乐</string>
    <string name="is_download_video">已下载该视频</string>
    <string name="loading">加载中</string>
    <string name="share_ok">分享成功</string>
    <string name="share_cancel">取消分享</string>
    <string name="share_error">分享失败</string>
    <string name="loading1">加载中...</string>
    <string name="service_error">服务器异常,请稍后重试</string>
    <string name="delete_toast">确定要%1$s这%2$d项%3$s吗？</string>
    <string name="wach_count">已有%d人收听</string>
    <string name="areward_album">分享给%1$d人下载App获绿色通道</string>
    <string name="notbuy_album">尚未购买该专辑,请点击购买在进行下载</string>
    <string name="buy_album">正在购买%1$s课程</string>
    <string name="buy_sub">正在订阅%1$s</string>
    <string name="message_detail">消息详情</string>
    <string name="guest_name">游客</string>
    <string name="not_net_toast">小P正在开小差</string>
    <string name="csan_album_title">分享即可领取“%1$s”专辑</string>
    <string name="togeter_lister">%1$s邀请你一起聆听</string>
    <string name="lister_count">%1$d人已收听</string>
    <string name="cannot_goto_playact">尚未购买该专辑,不能进入播放界面</string>
    <string name="player_stop">结束</string>
    <string name="player_restart">继续</string>
    <string name="player_pause">暂停</string>
    <string name="player_start">开始</string>
    <string name="collect_ok">收藏成功</string>
    <string name="not_body_plese">暂无内容,敬请期待</string>
    <string name="exercise_unfinish">检测到您上次的练习未完成,是否继续练习?</string>
    <string name="player_start_exercise">开始练习</string>
    <string name="not_message">还没有消息哦</string>
    <string name="getcode_ok">获取验证码成功</string>
    <string name="bangding">该手机号码已注册,正在为您绑定手机号</string>
    <string name="is_login">正在登录</string>
    <string name="login_erroe">登录失败</string>
    <string name="is_register">正在注册</string>
    <string name="register_error">注册失败</string>
    <string name="delete_act_edit">编辑</string>
    <string name="delete_act_sellect">全选</string>
    <string name="delete_act_cancel">取消</string>
    <string name="not_data">当前数据为空</string>
    <string name="input_ok_email">请输入正确的邮箱</string>
    <string name="submit">提交</string>
    <string name="contact_not_null">联系方式不能为空</string>
    <string name="please_input_advice">请输入您的宝贵建议</string>
    <string name="submit_ok">您的建议已提交成功!</string>
    <string name="login_algin">,请重新登录</string>
    <string name="hi_im">Hi! 我是%1$s</string>
    <string name="dialog_content_clear_cache">您正在执行清理内存操作,请确认是否清理?</string>
    <string name="confirm_logout">正在执行登录操作,请确认是否退出</string>
    <string name="image_toast">头像%1$s</string>
    <string name="play_count">已播放%1$d次</string>
    <string name="buy">购买</string>
    <string name="starttime_to_end">%1$s 至 %2$s</string>
    <string name="price">%1$s 元</string>
    <string name="price_f">%1$.2f 元</string>
    <string name="isvip">VIP</string>
    <string name="to_attend">待参加</string>
    <string name="already_over">已结束</string>
    <string name="have_in_hand">进行中</string>
    <string name="emtry_album">您还没有购买专辑哦</string>
    <string name="emtry_course">您还没有购买专栏哦</string>
    <string name="emtry_class">您还没有购买课程哦</string>
    <string name="emtry_fitness">您还没有购买训练营哦</string>
    <string name="empry_collect_act">您还没有收藏活动哦</string>
    <string name="empry_collect_fitness">您还没有收藏训练营哦</string>
    <string name="emtry_collect_course">您还没有收藏课程哦</string>
    <string name="emtry_collect_zhuan_lan">您还没有收藏专栏哦</string>
    <string name="emtry_download_album">您还没有下载专辑哦</string>
    <string name="emtry_download_course">您还没有下载课程哦</string>
    <string name="emtry_download_video">您还没有下载视频哦</string>
    <string name="emtry_download_music">您还没有下载音乐哦</string>
    <string name="emtry_sjk_comment">暂无评论</string>
    <string name="emtry_enrol_act">您还没有报名活动哦！</string>
    <string name="find_act">找活动</string>
    <string name="bocome_vip">恭喜你成为5P医学VIP会员</string>
    <string name="vip_valid">尊敬的会员，您的VIP有效期至\n %1$s .</string>
    <string name="update_ok">资料更新成功</string>
    <string name="act_detail">活动详情</string>
    <string name="now_to_join">立即参加</string>
    <string name="reconnection">正在重连...</string>
    <string name="buy_course_toast">正在购买%1$s课程</string>
    <string name="trailer_detail">预告详情</string>
    <string name="function_not_open">该功能暂未开放,敬请期待</string>
    <string name="watch_count">%1$d人观看</string>
    <string name="mp4">.mp4</string>
    <string name="emtry_act">这里还没有活动哦！\n 敬请期待！</string>
    <string name="not_content">还没有输入内容哦</string>
    <string name="comeon">来啦</string>
    <string name="download_finish1">已下载完成</string>
    <string name="action_up_algin_exit">再按一次退出程序</string>
    <string name="noinstalled_wechat">您尚未安装微信或者安装的微信版本不支持</string>
    <string name="price_float">%1$.2f元</string>
    <string name="download">下载</string>
    <string name="download_size">下载 ( %1$d ) M</string>
    <string name="cancel_selectall">取消全选</string>
    <string name="yyyy_mm">%1$d.%2$d</string>
    <string name="exercise_finish">%1$s完成%2$d分钟的静观</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="collect">收藏</string>
    <string name="collected">已收藏</string>
    <string name="please_input_phone">请输入手机号码</string>
    <string name="input_realy_phone">请输入正确的手机号码</string>
    <string name="res_getcode">重获验证码</string>
    <string name="history_course">历史课程</string>
    <string name="now_live">精彩直播</string>
    <string name="trailer">精彩预告</string>
    <string name="zhuanlan">专栏</string>
    <string name="all_album">静笃</string>
    <string name="all_emotion">情绪SOS</string>
    <string name="classify">分类</string>
    <string name="gongzuofang">工作坊</string>
    <string name="history_course_new">往期直播</string>
    <string name="splash_one">用精准健康预防疾病</string>
    <string name="register">注册账号</string>
    <string name="login">登录</string>
    <string name="selectall">全选</string>
    <string name="delete">删除</string>
    <string name="action_share">分享</string>
    <string name="live_over">直播结束</string>
    <string name="live_look">观看人数</string>
    <string name="live_like">点赞</string>
    <string name="live_time">直播时长</string>
    <string name="not_recomment">暂无推荐课程</string>
    <string name="not_course_detail">暂无课程简介</string>
    <string name="alipay_pay">支付宝支付</string>
    <string name="wechat_pay">微信支付</string>
    <string name="wechat_login">微信登录</string>
    <string name="used_coupan">使用优惠劵</string>
    <string name="settings_title_update_version">系统更新</string>
    <string name="audition">试听</string>
    <string name="wallet">我的钱包</string>
    <string name="gold_detail">金币明细</string>
    <string name="recharge">充值</string>
    <string name="free_coupon">免费获券</string>
    <string name="not_function">该功能暂未开放,敬请期待</string>
    <string name="myvip_tips">会员免费享用有效期内发布的会员专享音频、课程视频\n尊敬的会员，您的VIP有效期至\n%1$s</string>
    <string name="get_goal">赚取金币</string>
    <string name="profit_detail">收益明细</string>
    <string name="live_room">我的直播间后台</string>
    <string name="empty_profit_detail">还没有收益哦</string>
    <string name="add_card_code">添加银行卡</string>
    <string name="add_card_message">填写银行卡信息</string>
    <string name="settings_title_about">关于App</string>
    <string name="about_title">关于5P医学</string>
    <string name="not_subscribe">还没有内容</string>
    <string name="course_description">课程介绍</string>
    <string name="quit_course">退出课程</string>
</resources>