<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"

                android:layout_height="match_parent"
    >


    <com.ziran.meiliao.common.commonwidget.NormalTitleBar
        android:id="@+id/ntb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.ziran.meiliao.widget.ItemGroupView
        android:id="@+id/itemView_message"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_common_height"
        android:layout_below="@+id/ntb"
        android:layout_marginTop="24dp"
        app:itemView_leftText="@string/settings_title_message"
        app:showRightArrow="false"
        app:showSlideSwitch="true"/>
    <com.ziran.meiliao.widget.ItemGroupView
        android:id="@+id/itemview_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_common_height"
        android:layout_below="@+id/itemView_message"
        app:itemView_leftText="@string/settings_title_phone"
        app:showRightArrow="false"

        />

    <com.ziran.meiliao.widget.ItemGroupView
        android:id="@+id/itemView_update_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_common_height"
        android:layout_below="@+id/itemview_phone"
        app:itemView_leftText="@string/updata_pwd"
        app:showRightArrow="false"/>



    <com.ziran.meiliao.widget.ItemGroupView
        android:id="@+id/itemView_clear_cache"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_common_height"
        android:layout_below="@+id/itemView_update_pwd"
        app:itemView_leftText="@string/settings_title_clear_cache"
        app:showRightArrow="false"/>

    <com.ziran.meiliao.widget.ItemGroupView
        android:id="@+id/itemView_update_version"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_common_height"
        android:layout_below="@+id/itemView_clear_cache"
        app:itemView_leftText="@string/settings_title_update_version"
        app:showRightArrow="false"

        />


    <com.ziran.meiliao.widget.ItemGroupView
        android:id="@+id/itemView_about"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_common_height"
        android:layout_below="@+id/itemView_update_version"
        app:itemView_leftText="@string/settings_title_about"
        app:showRightArrow="false"/>


    <View
        style="@style/hor_match_line"
        android:layout_above="@+id/bt_settings_logout"/>

    <Button
        android:id="@+id/bt_settings_logout"
        style="@style/CommonBtnStyle"
        android:layout_alignParentBottom="true"
        android:background="@drawable/selector_btn_white_gray"
        android:text="退出登录"
        android:textColor="@color/red"
        android:textSize="17sp"/>


</RelativeLayout>