<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.ziran.meiliao.common.commonwidget.NormalTitleBar
        android:id="@+id/ntb"
        android:layout_width="match_parent"
        app:ntb_tv_left="showAndFinish"
        android:layout_height="wrap_content"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pwd_login"
        android:layout_marginLeft="88px"
        android:textSize="48px"
        android:textStyle="bold"
        android:textColor="@color/textColor_4c"
        android:layout_marginTop="73px"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="已注册用户输入密码登录"
        android:layout_marginLeft="88px"
        android:textSize="26px"
        android:textColor="#7c7c7c"
        android:layout_marginTop="28px"
        />

    <com.citypicker.citylist.widget.ClearEditText
        android:id="@+id/ed_phone"
        android:layout_width="match_parent"
        android:layout_marginLeft="88px"
        android:layout_marginRight="88px"
        android:layout_height="88px"
        android:hint="@string/input_phone"
        android:paddingLeft="49px"
        android:inputType="phone"
        android:maxLength="11"
        android:layout_marginTop="87px"
        android:layout_gravity="center"
        android:textSize="30px"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/textColor_b2"
        android:layout_below="@+id/afl"
        android:background="@drawable/normal_bg_tran"
        />


        <com.citypicker.citylist.widget.ClearEditText
            android:id="@+id/ed_pwd"
            android:layout_width="match_parent"
            android:layout_height="88px"
            android:hint="@string/input_pwd"
            android:paddingLeft="49px"
            android:layout_gravity="center"
            android:textSize="30px"
            android:layout_marginLeft="88px"
            android:layout_marginTop="50px"
            android:layout_marginRight="88px"
            android:inputType="textPassword"
            android:maxLength="16"
            android:singleLine="true"
            android:layout_centerHorizontal="true"
            android:textColorHint="@color/textColor_b2"
            android:layout_below="@+id/afl"
            android:background="@drawable/normal_bg_tran"
            />


    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_marginLeft="88px"
        android:layout_marginRight="88px"
        android:layout_height="88px"
        android:layout_marginTop="72px"
        android:text="@string/login_text"
        android:paddingLeft="92px"
        android:paddingRight="92px"
        android:layout_gravity="center"
        android:textSize="30px"
        android:layout_marginBottom="60px"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_below="@+id/afl"
        android:background="@drawable/normal_bg_bule50"
        />



</com.zhy.autolayout.AutoLinearLayout>