<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<com.zhy.autolayout.AutoRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180px"
    android:layout_alignParentRight="true"
    android:layout_height="wrap_content"
    android:background="@drawable/normal_bg_white"
    android:layout_marginRight="43px"
    android:layout_marginTop="109px"
    >
<TextView
    android:id="@+id/tv_share"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/textColor_666666"
    android:textSize="28px"
    android:layout_marginTop="19px"
    android:layout_centerHorizontal="true"
    android:text="@string/action_share"
    android:layout_marginBottom="22px"
    />


<View
    android:layout_width="match_parent"
    android:layout_height="1px"
    android:id="@+id/line_first"
    android:background="@color/province_line_border"
    android:layout_below="@+id/tv_share"
    />

    <TextView
        android:layout_below="@+id/line_first"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_course_description"
        android:layout_marginTop="21px"
            android:text="@string/course_description"
        android:textSize="28px"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:id="@+id/line_second"

        android:background="@color/province_line_border"
        android:layout_marginTop="22px"
        android:layout_below="@+id/tv_course_description"
        />
    <TextView
        android:layout_below="@+id/line_second"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_quit_description"
        android:layout_marginTop="21px"
        android:text="@string/quit_course"
        android:textSize="28px"
        android:layout_marginBottom="19px"
        android:textColor="#45C49D"
        />

</com.zhy.autolayout.AutoRelativeLayout>
</com.zhy.autolayout.AutoRelativeLayout>