<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent30">


    <LinearLayout
        android:id="@+id/layout_custom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:baselineAligned="true"
            android:paddingBottom="36dp"
            android:paddingTop="36dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_more_download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_more_download_unpre"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_more_download"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:id="@+id/tv_down"
                    android:text="@string/download"
                    android:textColor="@color/textColor_333"
                    android:textSize="18sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_more_collect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/selector_jyg_more_collect"/>

                <TextView
                    android:id="@+id/tv_more_collect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_more_collect"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:text="@string/collect"
                    android:textColor="@color/textColor_333"
                    android:textSize="18sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_more_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/selector_jyg_more_share"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_more_share"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:text="@string/action_share"
                    android:textColor="@color/textColor_333"
                    android:textSize="18sp"/>
            </RelativeLayout>
        </LinearLayout>

        <View style="@style/hor_match_line"/>

        <Button
            android:id="@+id/btn_mode_cancel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/selector_tran_gray"
            android:text="@string/delete_act_cancel"/>
    </LinearLayout>

</RelativeLayout>