<?xml version="1.0" encoding="utf-8"?>

<com.zhy.autolayout.AutoRelativeLayout


    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@mipmap/bg_login"
    >


    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="49px"
        android:layout_marginLeft="49px"
        android:layout_marginTop="64dp"
        android:background="@drawable/shadow_16225">

        <TextView
            android:id="@+id/tv_srzmm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="56px"
            android:layout_marginTop="59px"
            android:text="@string/input_phone_password"
            android:textColor="#444444"
            android:textSize="48px" />

        <TextView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/btn_login_close"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/tv_srzmm"
            android:textSize="16sp"
            android:layout_marginRight="69px"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            />
        <EditText
            android:id="@+id/tv_input_phone"
            android:layout_width="match_parent"
            android:layout_toLeftOf="@+id/iv_finish"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_srzmm"
            android:layout_below="@+id/tv_srzmm"
            android:padding="10px"
            android:layout_marginTop="151px"
            android:maxLength="16"
            android:background="@null"
            android:hint="@string/input_pwd"
            android:singleLine="true"
            android:inputType="textPassword|text"
            android:textColorHint="@color/textColor_CFCFCF"
            android:textSize="36px" />





        <TextView
            android:id="@+id/iv_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/login_right_go"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/tv_input_phone"
            android:gravity="center"
            android:textSize="16sp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_marginRight="68px"
            />
        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignStart="@+id/tv_input_phone"
            android:layout_alignRight="@+id/tv_srzmm"
            android:layout_below="@+id/tv_input_phone"
            android:layout_marginRight="144px"
            android:background="@color/textColor_DDDDDD" />

        <TextView
            android:id="@+id/tv_login_forgetPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/view_line"
            android:layout_below="@+id/view_line"
            android:layout_marginTop="120px"
            android:text="@string/forget_pwd"
            android:textColor="@color/textColor_999"
            android:textSize="24px" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:layout_alignLeft="@+id/tv_login_forgetPwd"
            android:layout_alignRight="@+id/tv_login_forgetPwd"
            android:layout_below="@+id/tv_login_forgetPwd"
            android:layout_marginBottom="78px"
            android:background="@color/textColor_999" />

        <TextView
            android:id="@+id/tv_use_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_line"
            android:layout_marginLeft="112px"
            android:layout_marginTop="120px"
            android:layout_toRightOf="@+id/tv_login_forgetPwd"
            android:text="@string/phone_code_login"
            android:textColor="@color/textColor_999"
            android:textSize="24px" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:layout_alignLeft="@+id/tv_use_phone"
            android:layout_alignRight="@+id/tv_use_phone"
            android:layout_below="@+id/tv_use_phone"
            android:layout_marginBottom="78px"
            android:background="@color/textColor_999" />
    </com.zhy.autolayout.AutoRelativeLayout>
</com.zhy.autolayout.AutoRelativeLayout>